--- a/h-fontend/package.json
+++ b/h-fontend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/font": "^7.3.67",
+    "@mdi/js": "^7.3.67",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5",
@@ -17,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
