add：滚动到可视区域固定操作区域

--- a/h-fontend/package.json
+++ b/h-fontend/package.json
@@ -12,12 +12,14 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "^7.3.67",
     "@mdi/js": "^7.3.67",
+    "lodash": "^4.17.21",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5",
     "vuetify": "^3.3.23"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.69.5",
