feat: 添加鉴权中间件以及抽离错误信息

--- a/h-fontend/package.json
+++ b/h-fontend/package.json
@@ -12,6 +12,7 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "^7.3.67",
     "@mdi/js": "^7.3.67",
+    "axios": "^1.6.2",
     "lodash": "^4.17.21",
     "vee-validate": "^4.11.8",
     "vue": "^3.3.7",
@@ -19,6 +20,7 @@
     "vuetify": "^3.3.23"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^4.2.3",
