--- a/h-backend/package.json
+++ b/h-backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -35,6 +36,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
